Kubernetes/Networking/kubecon/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlesswebsite
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: website
  clusterIP: None
