Kubernetes/Networking/kubecon/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31100
      name: http
  selector:
    app: website
