Kubernetes/Networking/kubecon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: website
